# 1DLayerModeling

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: basic_demo.py
layered1d/: __init__.py  materials.py  media.py  model.py  solver.py
tests/: test_physics_consistency.py
