[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layered1d"
version = "1.2.0"
description = "1D normal-incidence laminated structure forward model with spring interfaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["layered1d*"]
